--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,9 @@ ul,ol{
     padding: 0;
     list-style: none;
 }
+img{
+    display: block;
+}
 .lists{
     list-style-type: none;
 }
@@ -27,11 +30,11 @@ body{
     font-family: 'Roboto', sans-serif;
     color: var(--col);
     font-size: 14px;
-    
 }
 .span-web{
     color: #2196F3;
 }
+
 .section{
     padding-top: 94px;
     padding-bottom: 94px;
@@ -53,6 +56,10 @@ body{
     letter-spacing: 0.02em;
     font-weight: 500;
     line-height: 1.14;
+    color: var(--col);
+}
+.current{
+    color: var(--header-ul);
 }
 .header-transition:hover{
     color: var(--header-ul);
@@ -76,8 +83,10 @@ body{
     margin-left: 344px;
 }
 .container{
-    max-width: 1200px;
-    margin: auto;
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 .container-header{
     height: 100%;
@@ -94,12 +103,9 @@ body{
     margin-left: 93px;
 }
 /* Main */
-.main{
-    width: 100%;
-    background-color: #F5F5F5;
-}
 .main-title{
-    max-width: 696px;
+    width: 696px;
+    margin: 0 auto;
     font-size: 44px;
     font-weight: 900;
     text-align: center;
@@ -109,38 +115,30 @@ body{
     color: var(--white);
 }
 .conteiner-general{
-    display: flex;
-    align-items: center;
-    max-width: 100%;
-    height: 600px;
+    padding: 200px;
     background-color: #2F303A;
 }
-.conteiner-title-button{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
 .button-index{
+    display: block;
+    margin: 0 auto;
     margin-top: 30px;
     padding: 10px 32px;
-    letter-spacing: 0.06em;
     font-size: 16px;
     font-weight: 700;
+    line-height: 1.87;
     font-family: inherit;
-    background-color: #188CE8;
+    background-color: #2196F3;
     color: var(--white);
     letter-spacing: 0.06em;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
+    cursor: pointer;
 }
-.button-index:active{
-    background-color: #15568b;
-   color: var(--white);
-   border-radius: 4px;
-   border: 1px solid #0d497a;
+.button-index:active,
+.button-index:hover,
+.button-index:focus{
+    background-color: #188CE8;
 }
 .goals-flex{
     display: flex;
@@ -154,12 +152,16 @@ body{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     line-height: 1.14;
+    font-size: 14px;
 }
 .goals-text{
     margin-top: 10px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--grey);
+}
+.conteiner-goals{
+padding-bottom: 0;
 }
 /* Container-page */
 .conteiner-page{
@@ -179,8 +181,6 @@ body{
 }
 /* Conteiner-team */
 .conteiner-team{
-    font-size: 36px;
-    line-height: 1.17;
     background-color: #F5F4FA;
 }
 .team-name{
@@ -199,7 +199,7 @@ body{
 }
 .lists-people{
     max-width: 270px;
-    max-height: 368px;
+    background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -209,12 +209,12 @@ body{
     justify-content: space-between;
 }
 .name-profession{
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 /* Footer */
 .footer{ 
-    height: 252px;
+    padding: 60px 0;
     background-color: #2F303A;
 }
 .webstudiofooter{
@@ -229,13 +229,6 @@ body{
     font-style: normal;
 }
 
-.footer-flex{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-}
 .mailtel-footer{
     font-weight: 400;
 }
@@ -244,6 +237,9 @@ body{
     letter-spacing: 0.03em;
     line-height: 1.71;
     color: var(--white);
+}
+.footer-address .lists:not(:last-child){
+    margin-bottom: 9px;
 }
 .mailtel:hover,.adress:hover{
     color:var(--blue);
@@ -261,22 +257,19 @@ body{
     cursor: pointer;
     font-weight: 500;
     font-family: inherit;
-    letter-spacing: 0.03em;
     padding: 6px 22px 6px 22px;
     background-color: #F5F4FA;
     border: none;
     font-size: 16px;
     line-height: 1.62;
     letter-spacing: 0.03em;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
-.button-portfolio:hover{
+.button-portfolio:hover,
+.button-portfolio:focus{
     color: #FFFFFF;
     background-color: #2196F3;
-}
-.button-portfolio:active{
-    background-color: #1666a7;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-description{
     font-size: 18px;
@@ -292,7 +285,7 @@ body{
 .page{
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 8px;
 }
 .different-page{
     margin-top: 50px;
@@ -302,9 +295,12 @@ body{
 }
 .lists-different-page{
     max-width: 370px;
-    max-height: 404px;
     margin-bottom: 30px;
 }
+.lists-different-page:nth-last-child(-n + 3){
+margin-bottom: 0;
+}
+
 .container-text-portfolio{
     max-width: 322px;
     margin: auto;
@@ -313,7 +309,6 @@ body{
     flex-direction: column;
 }
 .border-text{
-    margin-top: -4px;
     padding-top: 20px;
     border: 1px solid #EEEEEE;
     border-top: none;
