--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ body{
     color: var(--white);
 }
 .conteiner-general{
-    padding: 200px;
+    padding: 200px 0;
     background-color: #2F303A;
 }
 .button-index{
